package app;

public class Client {
    public static void main(String[] args) {
        new LogIn();    //Creates and displayLog In Form
        //System.exit(0);
    }
}