package app;

import java.awt.event.*;

/**
 * This class is a Event Listener for Radio buttons in LogIn class
 */
public class RadioButtonListener implements ItemListener {
    LogIn form; //reference to LogIn form

    public RadioButtonListener(LogIn lg){
        form = lg;
    } //assign formal parameter to actual parameter

    @Override
    public void itemStateChanged(ItemEvent ie) {
        //System.out.println("ItemStateChanged");
        /**
         * if event is generated by staff radiobutton of LogIn class then
         * call displayStaffGUI()
         * else if event is generated by consumer radiobutton then
         * call displayUserGUI()
         */
        if(ie.getSource() == form.staff) {
            form.displayStaffGUI();
        }
        else if(ie.getSource() == form.user) {
            form.displayUserGUI();
        }
    }

}