@startuml

title __BILLINGSYSTEM's Class Diagram__\n

  namespace app {
    class app.Bill {
    }
  }
  

  namespace app {
    class app.BillCalculator {
    }
  }
  

  namespace app {
    class app.BillGeneratorDialog {
    }
  }
  

  namespace app {
    class app.Client {
    }
  }
  

  namespace app {
    class app.Consumer {
    }
  }
  

  namespace app {
    class app.DataBase {
    }
  }
  

  namespace app {
    class app.LogIn {
    }
  }
  

  namespace app {
    class app.LogInButtonListener {
    }
  }
  

  namespace app {
    class app.NewConsumerDialog {
    }
  }
  

  namespace app {
    class app.RadioButtonListener {
    }
  }
  

  namespace app {
    class app.StaffForm {
    }
  }
  

  namespace app {
    class app.UserForm {
    }
  }
  

  namespace app {
    class app.ViewConsumerDialog {
    }
  }
  

  app.BillCalculator -up-|> javax.swing.JDialog
  app.BillGeneratorDialog .up.|> java.awt.event.ActionListener
  app.BillGeneratorDialog -up-|> app.BillCalculator
  app.BillGeneratorDialog o-- app.Consumer : data
  app.Consumer o-- app.Bill : bill
  app.LogIn -up-|> javax.swing.JFrame
  app.LogInButtonListener .up.|> java.awt.event.ActionListener
  app.LogInButtonListener o-- app.LogIn : form
  app.NewConsumerDialog -up-|> javax.swing.JDialog
  app.RadioButtonListener .up.|> java.awt.event.ItemListener
  app.RadioButtonListener o-- app.LogIn : form
  app.StaffForm .up.|> java.awt.event.ActionListener
  app.StaffForm -up-|> javax.swing.JFrame
  app.UserForm .up.|> java.awt.event.ActionListener
  app.UserForm -up-|> javax.swing.JFrame
  app.ViewConsumerDialog -up-|> javax.swing.JDialog


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
